--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ django-modeltranslation==0.18.7
 drf-yasg==1.21.4
 django-cprofile-middleware==1.0.5
 
-psycopg[binary]==3.1.19
+psycopg2-binary==2.9.5
 firebase_admin==6.0.1
 requests==2.28.1
 
