--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django==4.1.9
+django==5.1.1
 djangorestframework==3.14.0
 django-cors-headers==3.13.0
 django-environ==0.9.0
@@ -28,11 +28,13 @@ pytest-cov==4.0.0
 model-bakery==1.9.0
 
 sendgrid==6.9.7
-google-cloud-logging==1.14.0
-google-cloud-error-reporting==0.33.0
+google-cloud-logging==3.10.0
+google-cloud-error-reporting==1.11.1
 google-cloud-secret-manager==2.13.0
 Pillow==9.3.0
 safety==2.3.5
 setuptools==67.3.1
 
 groq==0.9.0
+
+chess==1.11.1
