--- a/tf_service/Dockerfile
+++ b/tf_service/Dockerfile
@@ -14,4 +14,4 @@ COPY . .
 
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+ENTRYPOINT ["gunicorn", "main:app", "-b", ":8001", "-w", "2", "-k", "uvicorn.workers.UvicornWorker", "--timeout", "60"]
