--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: 664418978242.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/chat-api-django_service:lates
+          tags: 664418978242.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/chat-api-django_service:latest
           
